--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
             <div class="card">
                 <h3><i class="fas fa-chart-bar"></i> Performance des Cellules</h3>
                 <div id="cellules-performance">
+                    <p style="font-size: 1.2em; color: var(--text-muted);">Chargement des données...</p>
                 </div>
             </div>
         </div>
